# ros2-initiator-drone

./: DEPTH_CAMERA_DRIVER_SETUP.md  README.md
models/: README.md
src/drone_control/: CMakeLists.txt  package.xml
src/drone_control/config/: drone_settings.yaml
src/drone_control/launch/: drone_launch.py
src/mlx90640_node/: CMakeLists.txt  package.xml
src/mlx90640_node/include/mlx90640_node/: mlx90640_i2c_linux.h
src/mlx90640_node/launch/: drone_launch.py  mlx90640_launch.py
src/mlx90640_node/src/: mlx90640_i2c_linux.c  mlx90640_node.cpp  thermal_overlay_node.cpp
src/perception/human_pose_detection/: README.md  package.xml  setup.cfg  setup.py
src/perception/human_pose_detection/config/: human_box_tracker.yaml
src/perception/human_pose_detection/human_pose_detection/: check_runtime.py  human_box_tracker_node.py  movenet_pose_node.py
src/perception/human_pose_detection/launch/: movenet_pose_launch.py
src/sensors/mi0802_senxor_driver/: CMakeLists.txt  README.md  package.xml
src/sensors/mi0802_senxor_driver/config/: params.yaml
src/sensors/mi0802_senxor_driver/include/mi0802_senxor_driver/: frame_utils.hpp  mi0802_device.hpp
src/sensors/mi0802_senxor_driver/launch/: mi0802_senxor_launch.py
src/sensors/mi0802_senxor_driver/src/: frame_utils.cpp  mi0802_device.cpp  mi0802_senxor_node.cpp
src/sensors/mi0802_senxor_driver/test/: test_mi0802_driver.cpp
src/sensors/mlx90640_node/: CMakeLists.txt  package.xml
src/sensors/mlx90640_node/config/: params.yaml
src/sensors/mlx90640_node/src/: mlx90640_node.cpp  thermal_cropper_node.cpp
src/sensors/mpu6050_node/: CMakeLists.txt  package.xml
src/sensors/mpu6050_node/config/: params.yaml
src/sensors/mpu6050_node/launch/: mpu6050_launch.py
src/sensors/mpu6050_node/src/: mpu6050_node.cpp
