<?xml version="1.0"?>
<package format="3">
  <name>drone_control</name>
  <version>0.1.0</version>
  <description>Top-level launch and orchestration package for the initiator drone.</description>
  <maintainer email="user@example.com">Workspace maintainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>human_pose_detection</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
