<?xml version="1.0"?>
<package format="3">
  <name>mlx90640_node</name>
  <version>0.1.0</version>
  <description>Linux I2C ROS 2 driver for the Melexis MLX90640 thermal array.</description>
  <maintainer email="user@example.com">Workspace maintainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
