<?xml version="1.0"?>
<package format="3">
  <name>human_pose_detection</name>
  <version>0.1.0</version>
  <description>RGB-only TensorFlow Lite human tracking nodes.</description>
  <maintainer email="user@example.com">Workspace maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
