<?xml version="1.0"?>
<package format="3">
  <name>mi0802_senxor_driver</name>
  <version>0.1.0</version>
  <description>USB CDC ACM ROS 2 driver for the Meridian Innovation MI0802 SenXor.</description>
  <maintainer email="user@example.com">Workspace maintainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
